fix:test2 overflow

--- a/HomePage/AdaptivetyHome.css
+++ b/HomePage/AdaptivetyHome.css
@@ -2175,7 +2175,7 @@ top: -22px;
 position: absolute;
 height: 27px;
 left: 4.06%;
-right: -7.19%;
+right: 0%;
 top: 711px;
 
 }
@@ -2184,7 +2184,7 @@ top: 711px;
 position: absolute;
 height: 27px;
 left: 13.12%;
-right: -119.38%;
+right: 0%;
 top: 742px;
 
 }
@@ -2266,7 +2266,7 @@ top: 152px;
 position: absolute;
 height: 27px;
 left: 33.75%;
-right: -11.88%;
+right: 0%;
 top: 189px;
 
 }
@@ -2320,7 +2320,7 @@ top: 393px;
 position: absolute;
 height: 36px;
 left: 4.06%;
-right: -19.69%;
+right: 0%;
 top: 818px;
 
 }
@@ -2347,7 +2347,7 @@ color: #000000;
 position: absolute;
 height: 27px;
 left: 8.12%;
-right: -17.5%;
+right: 0%;
 top: 572px;
 
 }
@@ -2356,7 +2356,7 @@ top: 572px;
 position: absolute;
 height: 27px;
 left: 8.12%;
-right: -17.5%;
+right: 0%;
 top: 604px;
 
 }
